修改js和路径

--- a/bin/template/distribute_consumer_info.html
+++ b/bin/template/distribute_consumer_info.html
@@ -14,41 +14,41 @@
 <body>
 <div id="wap" class="js_regin_index">
 
-    <section class="section_find">
-        <ul>
-            <li>
-                <input class="text js_input_text js_storage" type="text" value="" placeholder="请输入手机号" />
-                <div>
-                    <span>查找</span>
-                </div>
-            </li>
+    <!--<section class="section_find">-->
+        <!--<ul>-->
+            <!--<li>-->
+                <!--<input class="text js_input_text js_storage" type="text" value="" placeholder="请输入手机号" />-->
+                <!--<div>-->
+                    <!--<span>查找</span>-->
+                <!--</div>-->
+            <!--</li>-->
 
-        </ul>
-    </section>
-    <div class="clearfix"></div>
+        <!--</ul>-->
+    <!--</section>-->
+    <!--<div class="clearfix"></div>-->
     <p class="reg_title grey">剩余次数:1000次</p>
     <section class="section_info">
         <dl class="hang">
             <dt class="js_shop_name_key">用户<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text js_storage" id="shop_name" type="text" value="" placeholder="请输入用户名" name="shopname" />
+                <input class="text js_input_text" id="shop_name" type="text" value="" placeholder="请输入用户名" name="shopname" />
             </dd>
         </dl>
         <dl class="hang">
             <dt>手机号<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text js_storage" type="text" value="" placeholder="请输入手机号" name="address" rows="2"></input>
+                <input class="text js_input_text consumer_phone" type="text" value="" placeholder="请输入手机号"></input>
             </dd>
         </dl>
         <dl class="hang">
             <dt class="js_shop_name_key">增加训练次数<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text js_storage" type="text" value="" placeholder="请输入次数" name="shopname" />
+                <input class="text js_input_text consumer_buy_times" type="text" value="" placeholder="请输入次数" />
             </dd>
         </dl>
     </section>
     <section class="section_footer">
-        <span class="content_sub js_second">确认添加</span>
+        <span class="content_sub js_distribute_times">确认添加</span>
     </section>
 </div>
 </body>
