--- a/bin/template/train.html
+++ b/bin/template/train.html
@@ -1,3 +1,4 @@
+# coding: utf-8
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +9,12 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style">
     <meta content="telephone=no" name="format-detection">
     <meta content="email=no" name="format-detection">
-    <script type="text/javascript" src="../dist/js/libs/flexible.debug.js"></script>
-    <link rel="stylesheet" href="../dist/css/uyu.css">
+    <script type="text/javascript" src="/static/js/libs/flexible.debug.js"></script>
+    <link rel="stylesheet" href="/static/css/uyu.css">
 </head>
 <body>
 <div id="wap" class="js_regin_index">
-    <p class="reg_title grey">
-        <span class="js_grade">当月账单</span>
-    </p>
+
     <section class="section_list section_reglist">
         <ul class="js_one">
             <li>
@@ -55,4 +54,6 @@
     </section>
 </div>
 </body>
+<script src="/static/js/libs/require.2.3.3.min.js" type="text/javascript" data-main="/static/js/uyusys/train.js" defer async="true"></script>
+
 </html>
