--- a/bin/static/css/common/common.css
+++ b/bin/static/css/common/common.css
@@ -658,7 +658,7 @@ input.border_red {
   content: "";
   width: 100%;
   height: 100%;
-  background-image: url("../../dist/img/load.png");
+  background-image: url("../img/load.png");
   background-position: 50%;
   background-size: 100%;
   background-repeat: no-repeat;
