--- a/bin/static/css/home.css
+++ b/bin/static/css/home.css
@@ -658,7 +658,7 @@ input.border_red {
   content: "";
   width: 100%;
   height: 100%;
-  background-image: url("../../dist/img/load.png");
+  background-image: url("../img/load.png");
   background-position: 50%;
   background-size: 100%;
   background-repeat: no-repeat;
@@ -757,7 +757,7 @@ dl.hang dd {
 }
 dl.hang dd span.arrow {
   display: inline-block;
-  background: url('../../dist/img/ic_next.png') center center no-repeat;
+  background: url('../img/ic_next.png') center center no-repeat;
   background-size: 0.3rem auto;
   width: 0.3rem;
   height: 0.6rem;
