--- a/bin/template/dis_consumer_info.html
+++ b/bin/template/dis_consumer_info.html
@@ -15,18 +15,18 @@
 <body>
 <div id="wap" class="js_regin_index">
 
-    <!--<section class="section_find">-->
-        <!--<ul>-->
-            <!--<li>-->
-                <!--<input class="text js_input_text js_storage" type="text" value="" placeholder="请输入手机号" />-->
-                <!--<div>-->
-                    <!--<span>查找</span>-->
-                <!--</div>-->
-            <!--</li>-->
+    <section class="section_find">
+        <ul>
+            <li>
+                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请输入手机号" />
+                <div class="js_search">
+                    <span>查找</span>
+                </div>
+            </li>
 
-        <!--</ul>-->
-    <!--</section>-->
-    <!--<div class="clearfix"></div>-->
+        </ul>
+    </section>
+    <div class="clearfix"></div>
     <p class="reg_title grey">剩余次数:<span id="store_left_times">0</span>次</p>
     <section class="section_info">
         <dl class="hang">
