分配查找添加placehoder

--- a/bin/template/dis_consumer_info.html
+++ b/bin/template/dis_consumer_info.html
@@ -18,7 +18,7 @@
     <section class="section_find">
         <ul>
             <li>
-                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请输入手机号" />
+                <input class="text js_input_text js_search_phone" type="text" value="" placeholder="请用户的手机号" />
                 <div class="js_search">
                     <span>查找</span>
                 </div>
