--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -1142,6 +1142,7 @@ section.section_info dl.hang:after {
 }
 section.section_info dl.hang dt {
   float: left;
+  background-color: #1ba1e2;
   width: 40%;
   position: relative;
 }
@@ -1164,7 +1165,7 @@ section.section_info dl.hang dt span.right_arrow i {
 }
 section.section_info dl.hang dd {
   float: right;
-  width: 60%;
+  width: 70%;
   text-align: right;
   line-height: 1rem;
 }
