--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -14,38 +14,78 @@
 </head>
 <body>
 <div id="wap" class="js_regin_index">
-    <p class="reg_title grey">
-        <span class="js_grade">当月账单</span>
-    </p>
+    <!--<p class="reg_title grey">-->
+        <!--<span class="js_grade">当月账单</span>-->
+    <!--</p>-->
     <section class="section_list section_bill_list">
         <ul class="js_one">
-            <li><span class="left_span js_date">日期:2017-01</span>
-                <span class="right_span js_times">次数:100</span>
-                <div class="clearfix"></div>
-                <span class="left_span js_amount">金额:100</span>
-                <span class="right_span js_earn">分成:100</span>
-                <div class="clearfix"></div>
+            <li>
+                <div class="content_div">
+                    <p class="left_content">金额: <span>1000</span>元</p>
+                    <p class="right_content">分成: <span>400</span>元</p>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content_div">
+                    <p class="left_content">日期: <span>2017-03-12</span></p>
+                    <p class="right_content">次数: <span>400</span>次</p>
+                    <div class="clearfix"></div>
+                </div>
             </li>
-            <li><span class="left_span js_date">日期:2017-01</span>
-                <span class="right_span js_times">次数:100</span>
-                <div class="clearfix"></div>
-                <span class="left_span js_amount">金额:100</span>
-                <span class="right_span js_earn">分成:100</span>
-                <div class="clearfix"></div>
+
+
+            <li>
+                <div class="content_div">
+                    <p class="left_content">金额: <span>1000</span>元</p>
+                    <p class="right_content">分成: <span>400</span>元</p>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content_div">
+                    <p class="left_content">日期: <span>2017-03-12</span></p>
+                    <p class="right_content">次数: <span>400</span>次</p>
+                    <div class="clearfix"></div>
+                </div>
             </li>
-            <li><span class="left_span js_date">日期:2017-01</span>
-                <span class="right_span js_times">次数:100</span>
-                <div class="clearfix"></div>
-                <span class="left_span js_amount">金额:100</span>
-                <span class="right_span js_earn">分成:100</span>
-                <div class="clearfix"></div>
+
+
+
+            <li>
+                <div class="content_div">
+                    <p class="left_content">金额: <span>1000</span>元</p>
+                    <p class="right_content">分成: <span>400</span>元</p>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content_div">
+                    <p class="left_content">日期: <span>2017-03-12</span></p>
+                    <p class="right_content">次数: <span>400</span>次</p>
+                    <div class="clearfix"></div>
+                </div>
             </li>
-            <li><span class="left_span js_date">日期:2017-01</span>
-                <span class="right_span js_times">次数:100</span>
-                <div class="clearfix"></div>
-                <span class="left_span js_amount">金额:100</span>
-                <span class="right_span js_earn">分成:100</span>
-                <div class="clearfix"></div>
+
+
+            <li>
+                <div class="content_div">
+                    <p class="left_content">金额: <span>1000</span>元</p>
+                    <p class="right_content">分成: <span>400</span>元</p>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content_div">
+                    <p class="left_content">日期: <span>2017-03-12</span></p>
+                    <p class="right_content">次数: <span>400</span>次</p>
+                    <div class="clearfix"></div>
+                </div>
+            </li>
+
+            <li>
+                <div class="content_div">
+                    <p class="left_content">金额: <span>1000</span>元</p>
+                    <p class="right_content">分成: <span>400</span>元</p>
+                    <div class="clearfix"></div>
+                </div>
+                <div class="content_div">
+                    <p class="left_content">日期: <span>2017-03-12</span></p>
+                    <p class="right_content">次数: <span>400</span>次</p>
+                    <div class="clearfix"></div>
+                </div>
             </li>
         </ul>
 
