--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -18,27 +18,92 @@
     <section class="section_list section_master">
         <ul class="js_one">
             <li>
-                <div class="master_dev master_icon"><img src="/static/img/ic_default_head.png"></div>
-                <div class="master_dev master_name">
-                    <span class="ma_name">大力金刚王</span>
-                    <span class="ma_phone">手机号</span>
+                <div class="eye_sight">
+                    <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
+                    <div class="eye_sight_info">
+                        <span class="es_name">大力金刚王</span>
+                        <span class="es_phone">手机号</span>
+                    </div>
                 </div>
-                <div class="master_dev master_edit">
-                    <span class="edit_btn">编辑</span>
+                <div class="eye_sight_op">
+                    <div class="eye_sight_delete">
+                        <span class="edit_btn">删除</span>
+                    </div>
+                    <div class="eys_sight_cancel">
+                        <span class="edit_btn">取消</span>
+                    </div>
                 </div>
-                <div class="clearfix"></div>
             </li>
 
             <li>
-                <div class="master_dev master_icon"><img src="/static/img/ic_default_head.png"></div>
-                <div class="master_dev master_name">
-                    <span class="ma_name">大力金刚王</span>
-                    <span class="ma_phone">手机号</span>
+                <div class="eye_sight">
+                    <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
+                    <div class="eye_sight_info">
+                        <span class="es_name">大力金刚王</span>
+                        <span class="es_phone">手机号</span>
+                    </div>
                 </div>
-                <div class="master_dev master_edit">
-                    <span class="edit_btn">编辑</span>
+                <div class="eye_sight_op">
+                    <div class="eye_sight_delete">
+                        <span class="edit_btn">删除</span>
+                    </div>
+                    <div class="eys_sight_cancel">
+                        <span class="edit_btn">取消</span>
+                    </div>
                 </div>
-                <div class="clearfix"></div>
+            </li>
+            <li>
+                <div class="eye_sight">
+                    <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
+                    <div class="eye_sight_info">
+                        <span class="es_name">大力金刚王</span>
+                        <span class="es_phone">手机号</span>
+                    </div>
+                </div>
+                <div class="eye_sight_op">
+                    <div class="eye_sight_delete">
+                        <span class="edit_btn">删除</span>
+                    </div>
+                    <div class="eys_sight_cancel">
+                        <span class="edit_btn">取消</span>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="eye_sight">
+                    <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
+                    <div class="eye_sight_info">
+                        <span class="es_name">大力金刚王</span>
+                        <span class="es_phone">手机号</span>
+                    </div>
+                </div>
+                <div class="eye_sight_op">
+                    <div class="eye_sight_delete">
+                        <span class="edit_btn">删除</span>
+                    </div>
+                    <div class="eys_sight_cancel">
+                        <span class="edit_btn">取消</span>
+                    </div>
+                </div>
+            </li>
+
+            <li>
+                <div class="eye_sight">
+                    <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
+                    <div class="eye_sight_info">
+                        <span class="es_name">大力金刚王</span>
+                        <span class="es_phone">手机号</span>
+                    </div>
+                </div>
+                <div class="eye_sight_op">
+                    <div class="eye_sight_delete">
+                        <span class="edit_btn">删除</span>
+                    </div>
+                    <div class="eys_sight_cancel">
+                        <span class="edit_btn">取消</span>
+                    </div>
+                </div>
             </li>
         </ul>
     </section>
