--- a/bin/static/css/uyu.css
+++ b/bin/static/css/uyu.css
@@ -1009,35 +1009,60 @@ section.section_dev_list .device_status {
   padding-right: 15px;
   text-align: right;
 }
-section.section_master li {
+section.section_eye_sight li {
+  position: relative;
   height: 1.4rem;
 }
-section.section_master .master_dev {
+section.section_eye_sight .eye_sight {
+  width: 100%;
+  position: absolute;
+  background-color: white;
+  z-index: 2;
+}
+section.section_eye_sight .eye_sight div {
   float: left;
 }
-section.section_master .master_icon {
-  margin: 0.2rem 15px 0.2rem 0;
+section.section_eye_sight .eye_sight .eye_sight_icon {
   width: 1rem;
   height: 1rem;
+  margin-right: 15px;
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
   border-radius: 5px;
+  -webkit-border-radius: 5px;
   border: 1px solid #e5e5e5;
   overflow: hidden;
 }
-section.section_master .master_name {
-  width: 50%;
+section.section_eye_sight .eye_sight .eye_sight_icon img {
+  width: 1rem;
+  height: 1rem;
 }
-section.section_master .master_edit {
-  width: 20%;
-  height: 1.4rem;
+section.section_eye_sight .eye_sight .eye_sight_info {
+  margin-top: 0.2rem;
 }
-section.section_master span {
+section.section_eye_sight .eye_sight .eye_sight_info span {
   display: block;
   line-height: 0.5rem;
+  text-align: left;
 }
-section.section_master .ma_name {
-  margin: 0.2rem 0 0;
+section.section_eye_sight .eye_sight_op {
+  width: 100%;
+  position: absolute;
+  z-index: 1;
 }
-section.section_master .edit_btn {
+section.section_eye_sight .eye_sight_op div {
+  float: right;
+}
+section.section_eye_sight .eye_sight_op .eye_sight_cancel {
+  background-color: lightgrey;
+}
+section.section_eye_sight .eye_sight_op .eye_sight_delete {
+  background-color: red;
+}
+section.section_eye_sight .eye_sight_op span {
+  display: block;
+  color: white;
+  width: 2rem;
   text-align: center;
   line-height: 1.4rem;
 }
