--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -15,7 +15,7 @@
 <body>
 <div id="wap" class="js_regin_index">
 
-    <section class="section_list section_master">
+    <section class="section_list section_eye_sight">
         <ul class="js_one">
             <li>
                 <div class="eye_sight">
