--- a/bin/template/dev.html
+++ b/bin/template/dev.html
@@ -16,11 +16,11 @@
 <div id="wap" class="js_regin_index">
     <section class="section_list section_dev_list">
         <ul class="js_one">
-            <li><span class="device_name">设备名</span><span class="device_status">状态:良好</span><div class="clearfix"></div></li>
-            <li><span class="device_name">设备名</span><span class="device_status">状态:良好</span><div class="clearfix"></div></li>
-            <li><span class="device_name">设备名</span><span class="device_status">状态:良好</span><div class="clearfix"></div></li>
-            <li><span class="device_name">设备名</span><span class="device_status">状态:良好</span><div class="clearfix"></div></li>
-
+            <li v-for="dev in devices">
+                <span class="device_name">{{dev.device_name}}</span>
+                <span class="device_status">状态:{{dev.status}}</span>
+                <div class="clearfix"></div>
+            </li>
         </ul>
     </section>
 </div>
