--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -19,41 +19,15 @@
     </p>
     <section class="section_list section_reglist">
         <ul class="js_one">
-            <li>
+            <li v-for="oneDistribute in allRecords">
                 <div class="record_dev record_icon"><img src="/static/img/ic_default_head.png"></div>
                 <div class="record_dev record_name">
-                    <span class="consumer_name">大力金刚王3</span>
-                    <span class="buy_date">2017-03-11 14:32:26</span>
+                    <span class="consumer_name">{{oneDistribute.buyer}}</span>
+                    <span class="buy_date">{{oneDistribute.create_time}}</span>
                     <div class="clearfix"></div>
                 </div>
                 <div class="record_dev_right record_times">
-                    <span class="buy_times">购买: 1次</span>
-                </div>
-                <div class="clearfix"></div>
-            </li>
-
-            <li>
-                <div class="record_dev record_icon"><img src="/static/img/ic_default_head.png"></div>
-                <div class="record_dev record_name">
-                    <span class="consumer_name">大力金刚王3</span>
-                    <span class="buy_date">2017-03-11 14:32:26</span>
-                    <div class="clearfix"></div>
-                </div>
-                <div class="record_dev_right record_times">
-                    <span class="buy_times">购买: 1次</span>
-                </div>
-                <div class="clearfix"></div>
-            </li>
-
-            <li>
-                <div class="record_dev record_icon"><img src="/static/img/ic_default_head.png"></div>
-                <div class="record_dev record_name">
-                    <span class="consumer_name">大力金刚王3</span>
-                    <span class="buy_date">2017-03-11 14:32:26</span>
-                    <div class="clearfix"></div>
-                </div>
-                <div class="record_dev_right record_times">
-                    <span class="buy_times">购买: 1次</span>
+                    <span class="buy_times">购买: {{oneDistribute.training_times}}次</span>
                 </div>
                 <div class="clearfix"></div>
             </li>
