--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -22,7 +22,7 @@
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
                     <div class="eye_sight_info">
                         <span class="es_name">{{person.username}}</span>
-                        <span class="es_phone">{{person.eyesight_id}}</span>
+                        <span class="es_phone">{{person.phone_num}}</span>
                     </div>
                 </div>
                 <div class="eye_sight_op">
