--- a/bin/static/css/home.css
+++ b/bin/static/css/home.css
@@ -719,6 +719,9 @@ body {
    -ms-user-select: none;
        user-select: none;
 }
+[v-cloak] {
+  display: none;
+}
 /* ==================注册-首页============================================================ */
 /*表格单行样式-----------------------------------------------*/
 dl.hang {
