--- a/bin/template/eye_sight.html
+++ b/bin/template/eye_sight.html
@@ -17,7 +17,7 @@
 
     <section class="section_list section_eye_sight">
         <ul class="js_one">
-            <li v-for="person in eye_sights">
+            <li v-cloak v-for="person in eye_sights">
                 <div class="eye_sight">
                     <div class="eye_sight_icon"><img src="/static/img/ic_eye_sight.png"></div>
                     <div class="eye_sight_info">
