--- a/bin/template/dis_record.html
+++ b/bin/template/dis_record.html
@@ -17,7 +17,7 @@
     <p class="reg_title grey">
         <span class="js_grade">当月分配记录</span>
     </p>
-    <section class="section_list section_reglist">
+    <section class="section_list section_record_list">
         <ul class="js_one">
             <li v-cloak v-for="oneDistribute in allRecords">
                 <div class="record_dev record_icon"><img src="/static/img/ic_default_head.png"></div>
