--- a/bin/template/dis_consumer_info.html
+++ b/bin/template/dis_consumer_info.html
@@ -32,13 +32,13 @@
         <dl class="hang">
             <dt class="js_shop_name_key">用户<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text consumer_name" type="text" value="" placeholder="请输入用户名" name="shopname" />
+                <input class="text js_input_text consumer_name" value="" />
             </dd>
         </dl>
         <dl class="hang">
             <dt>手机号<span class="right_arrow"><i class="i_normal">!</i></span></dt>
             <dd>
-                <input class="text js_input_text consumer_phone" type="text" value="" placeholder="请输入手机号"></input>
+                <input class="text js_input_text consumer_phone" value=""></input>
             </dd>
         </dl>
         <dl class="hang">
