--- a/bin/template/train.html
+++ b/bin/template/train.html
@@ -15,40 +15,119 @@
 <body>
 <div id="wap" class="js_regin_index">
 
-    <section class="section_list section_reglist">
+    <section class="section_list section_train_list">
         <ul class="js_one">
             <li>
-                <div class="bill_dev bill_icon"><img src="../dist/img/ic_default_head.png"></div>
-                <div class="bill_dev bill_name">
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
                     <span class="consumer_name">大力金刚王</span>
                     <span class="buy_date">2017-03-11 14:32:26</span>
                 </div>
-                <div class="bill_dev bill_times">
+                <div class="train_time">
                     <span class="buy_times">训练: 1次</span>
                 </div>
+                <div class="clearfix"></div>
             </li>
 
             <li>
-                <div class="bill_dev bill_icon"><img src="../dist/img/ic_default_head.png"></div>
-                <div class="bill_dev bill_name">
-                    <span class="consumer_name">大力金刚王2</span>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
                     <span class="buy_date">2017-03-11 14:32:26</span>
                 </div>
-                <div class="bill_dev bill_times">
+                <div class="train_time">
                     <span class="buy_times">训练: 1次</span>
                 </div>
+                <div class="clearfix"></div>
             </li>
 
             <li>
-                <div class="bill_dev bill_icon"><img src="../dist/img/ic_default_head.png"></div>
-                <div class="bill_dev bill_name">
-                    <span class="consumer_name">大力金刚王3</span>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
                     <span class="buy_date">2017-03-11 14:32:26</span>
                 </div>
-                <div class="bill_dev bill_times">
+                <div class="train_time">
                     <span class="buy_times">训练: 1次</span>
                 </div>
+                <div class="clearfix"></div>
+            </li>
 
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
+            </li>
+
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
+            </li>
+
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
+            </li>
+
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
+            </li>
+
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
+            </li>
+
+            <li>
+                <div class="train_dev train_icon"><img src="/static/img/ic_consumer_head.png"></div>
+                <div class="train_dev train_info">
+                    <span class="consumer_name">大力金刚王</span>
+                    <span class="buy_date">2017-03-11 14:32:26</span>
+                </div>
+                <div class="train_time">
+                    <span class="buy_times">训练: 1次</span>
+                </div>
+                <div class="clearfix"></div>
             </li>
         </ul>
     </section>
