--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -26,7 +26,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="content_div">
-                    <p class="left_content">结算周期: <span>{{bill.}}</span></p>
+                    <p class="left_content">结算周期: <span>{{bill.settle_cycle}}</span></p>
                     <p class="right_content">销售次数: <span>{{bill.settle_trainning_nums}}</span>次</p>
                     <div class="clearfix"></div>
                 </div>
