--- a/bin/template/bill.html
+++ b/bin/template/bill.html
@@ -30,6 +30,7 @@
                     <p class="right_content">销售次数: <span>{{bill.settle_trainning_nums}}</span>次</p>
                     <div class="clearfix"></div>
                 </div>
+                <div class="clearfix"></div>
             </li>
         </ul>
 
